--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
   </div>
 
   <script>
-    const ethAmount = 0.01952;
-    const totalInvestmentUSD = 26.5227 + 18.8930;
+    const ethAmount = 0.02916;
+    const totalInvestmentUSD = 26.5227 + 18.8930 + 24.1000;
 
     async function fetchETHProfit() {
     try {
@@ -36,12 +36,12 @@
         const profitNOK = profitUSD * usdToNok;
 
         // Kalkuler % av 500 NOK
-        const percentOf500 = (profitNOK / 500) * 100;
+        const percentOf500 = (profitNOK / 750) * 100;
 
         // Vis resultat
         document.getElementById('eth-value').textContent =
         `ETH pris: $${ethPriceUSD.toFixed(2)} | Fortjeneste: $${profitUSD.toFixed(2)} (${profitNOK.toFixed(2)} NOK) ` +
-        `| Det er ${percentOf500.toFixed(2)}% av 500 NOK`;
+        `| Det er ${percentOf500.toFixed(2)}% av 750 NOK`;
     } catch (error) {
         document.getElementById('eth-value').textContent = 'Feil ved henting av data.';
         console.error(error);
@@ -49,7 +49,7 @@
     }
 
     fetchETHProfit();
-    setInterval(fetchETHProfit, 1000); // Oppdater hvert 10. sekund
+    setInterval(fetchETHProfit, 1000); // Oppdater hvert 1. sekund
   </script>
   </main>
 </body>
