Updated css and html fixes, plus small optimization

--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="no">
 <head>
   <meta charset="UTF-8"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable-no"/>
   <title>Familiearv</title>
-  <link rel="icon" type="image/png" href="link/icon-familiearv.png" sizes="32x32">
+  <link rel="icon" type="image/png" href="link/icon 32px.png" sizes="32x32">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/odometer.js/0.4.8/themes/odometer-theme-default.css" />
   <script src="https://cdnjs.cloudflare.com/ajax/libs/odometer.js/0.4.8/odometer.min.js"></script>
@@ -234,12 +234,21 @@
         </section>
     </main>
     <footer>
+        <div class="social-section" id="hide-social">
+            <a href="/404"><img class="youtube-link" src="link/Youtube-link.svg" /></a>
+            <a href="/404"><img class="facebook-link" src="link/Facebook-link.svg" /></a>
+            <a href="https://www.instagram.com/mertygraal/"><img class="instagram-link" src="link/Instagram-link.svg" /></a>
+            <a href="https://x.com/mertygraal"><img class="x-link" src="link/X-link.svg" /></a>
+            <a href="https://github.com/discordboyy"><img class="github-link" src="link/github-link.svg" /></a>
+            <a href="https://discord.gg/S4EEqQ6N45"><img class="discord-link" src="link/Discord-link.svg" /></a>
+            <a href="https://t.me/creativewebtg"><img class="telegram-link" src="link/Telegram-link.svg" /></a>
+        </div>
         <div class="logo-social-section">
             <div class="logo-section">
                 <img class="group-7" src="link/F-letter.svg" />
                 <div class="amiliearv">amiliearv</div>
             </div>
-            <div class="social-section">
+            <div class="social-section" id="showup-social">
                 <a href="/404"><img class="youtube-link" src="link/Youtube-link.svg" /></a>
                 <a href="/404"><img class="facebook-link" src="link/Facebook-link.svg" /></a>
                 <a href="https://www.instagram.com/mertygraal/"><img class="instagram-link" src="link/Instagram-link.svg" /></a>
