--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="no">
 <head>
   <meta charset="UTF-8"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <title>Familiearv</title>
   <link rel="icon" type="image/png" href="link/icon 32px.png" sizes="32x32">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
