--- a/index.html
+++ b/index.html
@@ -420,6 +420,23 @@
         window.addEventListener("scroll", checkScrollElements);
         checkScrollElements(); // Initial check on load
     });
+
+      // Prevent pinch-to-zoom
+    document.addEventListener('touchstart', function (event) {
+        if (event.touches.length > 1) {
+        event.preventDefault();
+        }
+    }, { passive: false });
+
+    // Prevent double-tap zoom
+    let lastTouchEnd = 0;
+    document.addEventListener('touchend', function (event) {
+        const now = (new Date()).getTime();
+        if (now - lastTouchEnd <= 300) {
+        event.preventDefault();
+        }
+        lastTouchEnd = now;
+    }, false);
     </script>
 </body>
 </html>
