--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@
     { symbol: "ETH", amount: 0.02000, investmentUSD: 69.5157, targetNOK: 750 },
     { symbol: "XRP", amount: 6.00000, investmentUSD: 10.0000, targetNOK: 100 },
     { symbol: "AAVE", amount: 0.00000, investmentUSD: 0.0000, targetNOK: 1 },
-    { symbol: "SOL", amount: 0.00000, investmentUSD: 0.0000, targetNOK: 1 },,
+    { symbol: "SOL", amount: 0.24975040, investmentUSD: 46.54, targetNOK: 468.47 },,
     { symbol: "BNB", amount: 0.00000, investmentUSD: 0.0000, targetNOK: 1 }
     ];
 
