Update social media links and legal references in index.html

--- a/index.html
+++ b/index.html
@@ -284,13 +284,13 @@
                 <div class="amiliearv">amiliearv</div>
             </div>
             <div class="social-section" id="showup-social">
-                <a href="/404"><img class="youtube-link" src="link/Youtube-link.svg" loading="lazy"/></a>
-                <a href="/404"><img class="facebook-link" src="link/Facebook-link.svg" loading="lazy"/></a>
-                <a href="https://www.instagram.com/mertygraal/"><img class="instagram-link" src="link/Instagram-link.svg" loading="lazy"/></a>
-                <a href="https://x.com/mertygraal"><img class="x-link" src="link/X-link.svg" /></a>
-                <a href="https://github.com/discordboyy"><img class="github-link" src="link/github-link.svg" loading="lazy"/></a>
-                <a href="https://discord.gg/S4EEqQ6N45"><img class="discord-link" src="link/Discord-link.svg" loading="lazy"/></a>
-                <a href="https://t.me/creativewebtg"><img class="telegram-link" src="link/Telegram-link.svg" loading="lazy"/></a>
+                <a href="https://youtu.be/xvFZjo5PgG0?si=MiE6Vp7DTiM-tDat"><img class="youtube-link" src="link/Youtube-link.svg" loading="lazy"/></a>
+                <a href="https://youtu.be/xvFZjo5PgG0?si=MiE6Vp7DTiM-tDat"><img class="facebook-link" src="link/Facebook-link.svg" loading="lazy"/></a>
+                <a href="https://youtu.be/xvFZjo5PgG0?si=MiE6Vp7DTiM-tDat"><img class="instagram-link" src="link/Instagram-link.svg" loading="lazy"/></a>
+                <a href="https://youtu.be/xvFZjo5PgG0?si=MiE6Vp7DTiM-tDat><img class="x-link" src="link/X-link.svg" /></a>
+                <a href="https://youtu.be/xvFZjo5PgG0?si=MiE6Vp7DTiM-tDat><img class="github-link" src="link/github-link.svg" loading="lazy"/></a>
+                <a href="https://youtu.be/xvFZjo5PgG0?si=MiE6Vp7DTiM-tDat"><img class="discord-link" src="link/Discord-link.svg" loading="lazy"/></a>
+                <a href="https://youtu.be/xvFZjo5PgG0?si=MiE6Vp7DTiM-tDat"><img class="telegram-link" src="link/Telegram-link.svg" loading="lazy"/></a>
             </div>
         </div>
         <div class="law-section">
@@ -348,8 +348,8 @@
             <div class="law-links">
                 Nyttige lenker:
                 <br />
-                <a class="link-style" href="/404">Vanlige spørsmål</a> | <a class="link-style" href="/404">Bruksvilkår</a> | <a class="link-style" href="/404">Personvernerklæring</a> |
-                <a class="link-style" href="/404">Kontaktinformasjon</a>
+                <a class="link-style" href="https://youtu.be/xvFZjo5PgG0?si=MiE6Vp7DTiM-tDat">Vanlige spørsmål</a> | <a class="link-style" href="https://youtu.be/xvFZjo5PgG0?si=MiE6Vp7DTiM-tDat">Bruksvilkår</a> | <a class="link-style" href="https://youtu.be/xvFZjo5PgG0?si=MiE6Vp7DTiM-tDat">Personvernerklæring</a> |
+                <a class="link-style" href="https://youtu.be/xvFZjo5PgG0?si=MiE6Vp7DTiM-tDat">Kontaktinformasjon</a>
             </div>
             </div>
         </div>
